2007-02-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/Makefile.am:
	  Add queue.py
	* flumotion/component/producers/queue.py:
	  Add simple async queue object
	* flumotion/component/producers/asfparse.py:
	  Move all the ASF/HTTP parsing in here, clean it up, clean up
	  ASF parsing, redesign API
	  Add a gstreamer element called ASFSrc
	* flumotion/component/producers/wms.py:
	  Use ASFSrc

2007-02-21  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/wms.py:
	  Fix up padding API. Now works.

2007-02-21  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/wms.py:
	  Commit asf parser (not tested yet).

2007-02-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Pad data packets by two bytes. Hack to make this demoable.

2007-02-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Next checkpoint.
	  Can now negotiate with WME, and dump something that looks like ASF
	  to a file

2007-02-19  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Some internal cleanups.

2007-02-19  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	  Add things for pychecker to pycheck
	* configure.ac:
	* flumotion/component/Makefile.am:
	  Add new directory

	* flumotion/component/producers/Makefile.am:
	* flumotion/component/producers/__init__.py:
	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml:
	  Checkpoint for work.
	  Doesn't do anything very useful yet.

2007-02-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/test/Makefile.am:
	* misc/Makefile.am:
	  Again, autotoolery to make setup.py work properly.

=== release 0.3.1 ===

2007-01-05  Julien MOUTTE  <julien@moutte.net>

	* flumotion-windowsmedia.spec.in: Remove noarch from spec.

2006-11-10  Michael Smith  <msmith@fluendo.com>
