@@ -1,5 +1,14 @@
 2007-02-22  Michael Smith  <msmith@fluendo.com>
 
+	* flumotion/component/producers/asfparse.py:
+	* flumotion/component/producers/wms.py:
+	* flumotion/component/producers/wms.xml:
+	  Cleanup for previous changes so it now works as well as previously
+	  (this is not yet very well). Dumps a file to /tmp/dump1.asf
+	  successfully.
+
+2007-02-22  Michael Smith  <msmith@fluendo.com>
+
 	* flumotion/component/producers/Makefile.am:
 	  Add queue.py
 	* flumotion/component/producers/queue.py:
